--- a/estilos/style.css
+++ b/estilos/style.css
@@ -14,15 +14,36 @@ nav{
 }
 nav a{
 
-text-decoration: none;
-color: black;
+    text-decoration: none;
+    color: black;
 }
 
 main{
-    min-height: 70%;
-    background-color: aqua;
-}
-footer{
-    height: 15%;
+    min-height: 65%;
     background-color: red;
+}
+
+footer{
+    height: 23%;
+    width: 100vw;
+    padding: 1rem 2rem;
+    background-color: #33F2C9;
+}
+
+footer a{
+    color: black;
+    text-decoration: none;
+    margin: .5rem;
+}
+
+footer p {
+    margin-bottom: 0rem;
+}
+
+#copy-rights {
+    width: 100vw;
+    border-top: 1px black solid;
+}
+.container {
+    width: 100vh;
 }
