--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,12 +5,12 @@ body{
     height: 100vh;
 }
 header{
-    height:15%;
-    background-color: blue;
+    height:15vh;
+    background-color: #afeeee;
 }
 nav{
-    height: 80%;
-    background-color: green;
+    height: 5vh;
+    /* background-color: green; */
 }
 nav a{
 
@@ -19,10 +19,48 @@ color: black;
 }
 
 main{
-    min-height: 70%;
+    min-height: 70vh;
     background-color: aqua;
 }
 footer{
-    height: 15%;
+    height: 15vh;
     background-color: red;
 }
+
+
+
+
+
+/* Barra de Navegacion */
+.dropbtn {
+    /* background-color: #04AA6D; */
+    color: white;
+    /* padding: 16px; */
+    font-size: 16px;
+    border: none;
+    text-decoration: none;
+    padding-left: 1vw;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #04AA6D;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+  
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  /* .dropdown:hover .dropbtn {background-color: #3e8e41;} */
