--- a/estilos/style.css
+++ b/estilos/style.css
@@ -19,7 +19,7 @@ color: black;
 }
 
 main{
-    min-height: 70%;
+    min-height: 75%;
     background-color: aqua;
 }
 footer{
@@ -27,21 +27,11 @@ footer{
     background-color: red;
 }
 
-.card-text {
-font-size: 12px;
-height: 150px;
-}
-
-.card-img-top {
-    width: 200px;
-    height: 200px;
-
-}
-
 .card-title {
-    font-size: 16px;
+    font-size: 15px;
 }
 
-.card-title.far{
-    font-size: 11.5px;
+.card{
+    background-color: rgb(144, 12, 63 );
+    color: white;
 }
