--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,7 +10,6 @@ header{
 }
 nav{
     height: 5%;
-    /* background-color: green; */
 }
 nav a{
 
@@ -59,7 +58,7 @@ footer{
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #04AA6D;
+    background-color: #04aa6dad;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
