--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,15 +6,16 @@ body{
 }
 header{
     height:15%;
-    background-color: #afeeee;
+    background-color: #2EC4B6;
+    
 }
 nav{
     height: 5%;
+    width: 45%;
 }
 nav a{
 
     text-decoration: none;
-    color: black;
 }
 
 main{
@@ -47,7 +48,7 @@ footer{
 /* Barra de Navegacion */
 .dropbtn {
     /* background-color: #04AA6D; */
-    color: white;
+    color: black;
     /* padding: 16px; */
     font-size: 16px;
     border: none;
@@ -58,7 +59,7 @@ footer{
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #04aa6dad;
+    background-color: #cbf3f096;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -98,3 +99,15 @@ footer p {
 }
 
 
+.offcanvas-body{
+    background-color: #2EC4B6 !important;
+}
+
+
+.logo{
+    height: 80px;
+    width: 80px;
+}
+#divmailcarrito{
+    width: 30%;
+}
