se integra la funcionalidad del carrito con el offcanvas del header, se aniade el agregar producto al carrito, mostrar elementos del carrito dentro del offCanvas, se calcular subtotales y se muestra el precio total de los productos, al finalizar la compra se actualiza el stock de los productos, se aniadio el botom + - para permitir al usuario aumentar las unidades q desee comprar. Aun falta agregar y dar funcionalidadal icono de borrar en el carrito y persistir datos en el local storage

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -111,3 +111,14 @@ footer p {
 #divmailcarrito{
     width: 30%;
 }
+
+/* boton + - */
+#contador input{
+    width: 25px;
+    text-align: center;
+}
+#contador button{
+    width: 25px;
+    text-align: center;
+    background-color: rgb(123, 123, 234);
+}
