--- a/estilos/style.css
+++ b/estilos/style.css
@@ -11,7 +11,7 @@ header{
 }
 nav{
     height: 5%;
-    width: 45%;
+    width: 40%;
 }
 nav a{
 
@@ -122,3 +122,17 @@ footer p {
     text-align: center;
     background-color: rgb(123, 123, 234);
 }
+
+
+.logopetshop{
+    height: 100px;
+    width: 350px;
+}
+/*  .carousel-inner2 img {
+    width: 100%;
+    max-height: 500px;
+}
+
+.carousel-inner2{
+ height: 500px;
+}  */
