se presisten cambios den los botones de agregar a carrito despues de recargar pagina en base a si el carrito tiene elementos

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -173,3 +173,18 @@ footer p {
       background-color: white;
     }
   }
+
+  /*  boton agregar y ver descripcion */
+ #botonAgregar{
+  background-color:#2EC4B6;
+  border-color: #04aa6d;
+}
+#botonAgregar:hover {
+ background-color:#04aa6d;
+ border-color: #2EC4B6;
+}
+
+#botonAgregado{
+ background-color:#04aa6d;
+ border-color: #2EC4B6;
+}
