--- a/estilos/style.css
+++ b/estilos/style.css
@@ -211,4 +211,25 @@ footer .titulo_footer {
   background-color:red;
   border-color: #2EC4B6;
  }
- 
+
+/* boton agregar y boton quitar de favoritos  */ 
+#botonAgregarFav{
+  background-color:#2EC4B6;
+  border-color: #04aa6d;
+}
+#botonAgregarFav:hover {
+ background-color:#04aa6d;
+ border-color: #2EC4B6;
+}
+#botonAgregadoFav{
+  background-color:#04aa6d;
+  border-color: #2EC4B6;
+ }
+
+#botonQuitarFav{
+  background-color:red;
+  border-color: rgb(155, 52, 12);
+}
+#botonQuitarFav:hover{
+  background-color:rgb(230, 126, 66);
+  border-color: rgb(155, 52, 12);
