retocando funcionalidad del form, falta terminar

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -200,3 +200,7 @@ footer .titulo_footer {
  border-color: #2EC4B6;
 }
 
+#botonSinStock{
+  background-color:#6f81e3;
+  border-color: #2EC4B6;
+ }
