--- a/estilos/style.css
+++ b/estilos/style.css
@@ -234,3 +234,26 @@ footer .titulo_footer {
   background-color:rgb(230, 126, 66);
   border-color: rgb(155, 52, 12);
 }
+#botonAgregarF{
+  background-color:#2EC4B6;
+  border-color: #04aa6d;
+}
+#botonAgregarF:hover {
+ background-color:#04aa6d;
+ border-color: #2EC4B6;
+}
+
+#botonAgregadoF{
+ background-color:#04aa6d;
+ border-color: #2EC4B6;
+}
+
+#botonSinStockF{
+  background-color:red;
+  border-color: #2EC4B6;
+ }
+
+.cardFav{
+  background-color: rgb(226, 99, 26);
+  color: white; 
+}
